--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="https://biorender.com/img/covid/vaccine.png" />
-    <title>Where's my Vaccine?</title>
+    <title>My Vaccination Center</title>
   </head>
   <body>
     <div class="searchBox">
